--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -70,7 +70,16 @@
 
         <activity
             android:name=".MapsActivity2"
-            android:label="@string/title_activity_maps2"></activity>
+            android:label="@string/title_activity_maps2" />
+        <activity
+            android:name=".AllActivity"
+            android:label="@string/title_activity_all"
+            android:parentActivityName=".SearchActivity"
+            android:theme="@style/AppTheme">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.piyushrao.travelera.SearchActivity" />
+        </activity>
     </application>
 
 </manifest>
