--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -57,6 +57,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.piyushrao.travelera.SearchActivity" />
         </activity>
+        <activity android:name=".DetailActivity"></activity>
     </application>
 
 </manifest>
